@@ -1,3 +1,6 @@
+	* Add the ability to have client side only asm mods.
+	* Update to java 8.
+
 1.1.0:
 	* Fix running in deobfuscated environments when no mapping is available.
 	* Add the ability to use forge deobfuscation data if found.
